[tool.poetry]
name = "youtrack-sdk"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.12"
requests = "*"
pydantic = "^2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

requests-mock = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["**/tests/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
