[tool.poetry]
name = "youtrack-sdk"
version = "1.1+SNAPSHOT"
description = "YouTrack SDK"
authors = ["moneymeets <service@moneymeets.com>"]
readme = "README.md"
repository = "https://github.com/moneymeets/youtrack-sdk"
packages = [
    { include = "youtrack_sdk" },
]
include = ["VERSION.txt"]
keywords = ["youtrack", "sdk"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "~3.12"
requests = "*"
pydantic = "^2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

requests-mock = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["**/tests/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
