[project]
name = "youtrack-sdk"
description = "YouTrack SDK"
dynamic = [ "version" ]
authors = [
    { name = "moneymeets", email = "service@moneymeets.com" },
]
readme = "README.md"
include = ["VERSION.txt"]
keywords = ["youtrack", "sdk"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/moneymeets/youtrack-sdk"

[tool.poetry]
version = "1.1+SNAPSHOT"
packages = [
    { include = "youtrack_sdk" },
]

[tool.poetry.dependencies]
requests = "*"
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

requests-mock = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["**/tests/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
